16432
This code compiles...
```scala
abstract class Prova2 extends Dynamic {
  def applyDynamic(m: String)(): Unit
  //private def privateMethod() = ()
}

object Prova extends App {
  val prova= new Prova2 {
    def applyDynamic(m: String)() = ()
  }
  prova.privateMethod()
}
```
... but if you uncomment that privateMethod declaration, it fails to compile:
Prova.scala:5: error: method privateMethod in class Prova2 cannot be accessed in Prova2
  prova.privateMethod()
        ^

